--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,27 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>it</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.12.4</version>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <test.hdfs.fs.default.name>hdfs://localhost:8020/</test.hdfs.fs.default.name>
+                                <test.hdfs.temp.dir>/tmp</test.hdfs.temp.dir>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <repositories>
         <repository>
             <id>mulesoft-releases</id>
