--- a/doc/mule-module-hdfs.xml.sample
+++ b/doc/mule-module-hdfs.xml.sample
@@ -8,10 +8,10 @@
 <hdfs:read path="/tmp/test.dat" bufferSize="8192" />
 <!-- END_INCLUDE(hdfs:read-2) -->
 
-<!-- BEGIN_INCLUDE(hdfs:set-path-exists-variable) -->
+<!-- BEGIN_INCLUDE(hdfs:get-meta-information) -->
 <!-- Ensures a path exists -->
-<hdfs:set-path-exists-variable variableName="hdfsPathExists" path="/tmp/test.dat" />
-<!-- END_INCLUDE(hdfs:set-path-exists-variable) -->
+<hdfs:get-meta-information path="/tmp/test.dat" />
+<!-- END_INCLUDE(hdfs:get-meta-information) -->
 
 <!-- BEGIN_INCLUDE(hdfs:write-1) -->
 <!-- Writing to a file using the configuration -->
