activated studio support, added missing icons and changed argument types that made devkit choke

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
     <properties>
         <hadoop.version>1.0.4</hadoop.version>
-        <devkit.studio.package.skip>true</devkit.studio.package.skip>
+        <devkit.studio.package.skip>false</devkit.studio.package.skip>
     </properties>
 
     <dependencies>
