--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<name>HDFS Connector</name>
 
 	<properties>
+		<category>Community</category>
+        	<licensePath>LICENSE.md</licensePath>
 		<hadoop.version>1.0.4</hadoop.version>
 		<devkit.studio.package.skip>false</devkit.studio.package.skip>
 	</properties>
