--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>org.mule.modules</groupId>
 	<artifactId>mule-module-hdfs</artifactId>
-	<version>3.5-SNASHOT</version>
+	<version>3.5-SNAPSHOT</version>
 	<packaging>mule-module</packaging>
 	<name>HDFS Connector</name>
 
