--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.mule.tools.devkit</groupId>
@@ -9,7 +8,7 @@
 	</parent>
 	<groupId>org.mule.modules</groupId>
 	<artifactId>mule-module-hdfs</artifactId>
-	<version>3.5-SNAPSHOT</version>
+	<version>3.5</version>
 	<packaging>mule-module</packaging>
 	<name>HDFS Connector</name>
 
