[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>org.mule.modules</groupId>
 	<artifactId>mule-module-hdfs</artifactId>
-	<version>3.5</version>
+	<version>3.6-SNAPSHOT</version>
 	<packaging>mule-module</packaging>
 	<name>HDFS Connector</name>
 
