--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>org.mule.modules</groupId>
 	<artifactId>mule-module-hdfs</artifactId>
-	<version>3.7-SNAPSHOT</version>
+	<version>3.7.0</version>
 	<packaging>mule-module</packaging>
 	<name>HDFS Connector</name>
 
