--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         	<licensePath>LICENSE.md</licensePath>
 		<hadoop.version>1.0.4</hadoop.version>
 		<devkit.studio.package.skip>false</devkit.studio.package.skip>
+		<connector.test.version>2.0.4-SNAPSHOT</connector.test.version>
 	</properties>
 
 	<scm>
