--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.mule.tools.devkit</groupId>
 		<artifactId>mule-devkit-parent</artifactId>
-		<version>3.5.0-bighorn</version>
+		<version>3.5.0</version>
 	</parent>
 	<groupId>org.mule.modules</groupId>
 	<artifactId>mule-module-hdfs</artifactId>
