Renamed Connector file & Removed credentials

--- a/src/test/resources/integration-credentials.properties
+++ b/src/test/resources/integration-credentials.properties
@@ -1,9 +1,9 @@
-hadoop.it.filesystemname=hdfs://localhost:9000
-hadoop.it.username=hadoopusr
-hadoop.it.usergroup=hadoopgp
-hadoop.it.filename=myfile.data
-hadoop.it.dir=mydir
-hadoop.it.permission=751
-hadoop.it.encoding=UTF-8
-hadoop.it.messagepart1=Hello Hadoop World!
-hadoop.it.messagepart2= >>> Powered by Mule
+hadoop.it.filesystemname=
+hadoop.it.username=
+hadoop.it.usergroup=
+hadoop.it.filename=
+hadoop.it.dir=
+hadoop.it.permission=
+hadoop.it.encoding=
+hadoop.it.messagepart1=
+hadoop.it.messagepart2=
