HDFSC-1 | Upgraded HDFS client to version 2.7.1 HDFSC-2 | Upgraded devkit to version 3.9.0
Signed-off-by: Bogdan Ilies <bogdan.ilies@mulesoft.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
-.studio
-target
-*.iws
-*.ipr
-*.iml
-.settings
 .classpath
+.settings/
 .project
-.checkstyle
-.springBeans
-.idea
-.DS_Store
 .factorypath
-dependency-reduced-pom.xml
+*.iml
+*.ipr
+*.iws
+target/
+bin/
+.idea/
+*.class
+*.jar
+*.war
+.DS_Store
+automation-credentials.properties
+muleLicenseKey.lic
