HDFSC-15 | Improved connector's documentation.
Signed-off-by: Bogdan Ilies <bogdan.ilies@mulesoft.com>

--- a/doc/mule-module-hdfs.xml.sample
+++ b/doc/mule-module-hdfs.xml.sample
@@ -3,6 +3,21 @@
 <hdfs:config nameNodeUri="hdfs://localhost:8020/" username="hadoopusr" />
 <!-- END_INCLUDE(hdfs:config-1) -->
 
+<!-- BEGIN_INCLUDE(hdfs:config-with-kerberos) -->
+<!-- Simple configuration -->
+<hdfs:config-with-kerberos nameNodeUri="hdfs://localhost:8020/" username="hadoopusr" keytabPath="hdfs.keytab">
+    <hdfs:configuration-entries>
+        <hdfs:configuration-entry key="fs.default.name">hdfs://localhost:8020/</hdfs:configuration-entry>
+        <hdfs:configuration-entry key="dfs.data.dir">/home/username/hdfs/data</hdfs:configuration-entry>
+    </hdfs:configuration-entries>
+    <hdfs:configuration-resources>
+        <hdfs:configuration-resource>/etc/hadoop/core-site.xml</hdfs:configuration-resource>
+        <hdfs:configuration-resource>/etc/hadoop/hdfs-site.xml</hdfs:configuration-resource>
+        <hdfs:configuration-resource>/etc/hadoop/mapred-site.xml</hdfs:configuration-resource>
+    </hdfs:configuration-resources>
+</hdfs:config-with-kerberos>
+<!-- END_INCLUDE(hdfs:config-with-kerberos) -->
+
 <!-- BEGIN_INCLUDE(hdfs:config-2) -->
 <!-- Entries-based configuration -->
 <hdfs:config>
