--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <groupId>org.mule.tools.devkit</groupId>
-        <artifactId>mule-devkit-parent</artifactId>
-        <version>3.9.0</version>
+        <groupId>org.mule.extensions</groupId>
+        <artifactId>mule-modules-parent</artifactId>
+        <version>1.0.0-BETA</version>
     </parent>
-    <groupId>org.mule.modules</groupId>
-    <artifactId>mule-module-hdfs</artifactId>
+
+    <groupId>org.mule.connectors</groupId>
+    <artifactId>mule-hdfs-connector</artifactId>
     <version>5.0.0-SNAPSHOT</version>
-    <packaging>mule-module</packaging>
+    <packaging>mule-extension</packaging>
     <name>Mule HDFS Connector</name>
 
     <properties>
