--- a/pom.xml
+++ b/pom.xml
@@ -108,19 +108,19 @@
 		</pluginRepository>
 	</pluginRepositories>
 
-    <distributionManagement>
-		<repository>
-			<id>mulesoft-releases</id>
-			<name>Mule Releases Repository</name>
-			<url>https://repository-master.mulesoft.org/nexus/content/repositories/releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>mulesoft-snapshots</id>
-			<name>Mule Snapshots Repository</name>
-			<url>https://repository-master.mulesoft.org/nexus/content/repositories/snapshots/</url>
-			<uniqueVersion>false</uniqueVersion>
-		</snapshotRepository>
-	</distributionManagement>
+	<distributionManagement>
+        <repository>
+            <id>mule-ee-releases</id>
+            <name>MuleEE Releases Repository</name>
+            <url>https://repository-master.mulesoft.org/nexus/content/repositories/releases-ee/</url>
+        </repository>
+        <snapshotRepository>
+            <id>mule-ee-snapshots</id>
+            <name>MuleEE Snapshots Repository</name>
+            <url>https://repository-master.mulesoft.org/nexus/content/repositories/ci-snapshots/</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
 
     <scm>
         <connection>scm:git:git@github.com:mulesoft/hdfs-connector.git</connection>
