--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.mule.extensions</groupId>
         <artifactId>mule-modules-parent</artifactId>
-        <version>1.0.0-BETA</version>
+        <version>1.0.0-rc-SNAPSHOT</version>
     </parent>
 
     <groupId>org.mule.connectors</groupId>
@@ -25,29 +25,38 @@
     </properties>
 
     <dependencies>
-        <!-- Mule Connector Test Framework -->
+        <!-- https://mvnrepository.com/artifact/org.apache.ant/ant -->
         <dependency>
-			<groupId>org.mule.tests</groupId>
-			<artifactId>mule-tests-unit</artifactId>
-			<version>4.0.0-BETA</version>
-			<scope>test</scope>
-		</dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant</artifactId>
+            <version>1.8.2</version>
+        </dependency>
+
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
             <version>${harmcrest.version}</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-common -->
         <dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-client</artifactId>
-            <version>${hadoop.version}</version>
+            <artifactId>hadoop-common</artifactId>
+            <version>2.8.1</version>
         </dependency>
-		<dependency>
+
+        <dependency>
 			<groupId>net.sf.dozer</groupId>
 			<artifactId>dozer</artifactId>
 			<version>5.5.1</version>
 		</dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>5.0.0.M5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -62,33 +71,19 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.mule.certification</groupId>
-                <artifactId>project-structure-validation</artifactId>
-                <version>1.0.6</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>validate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
-
     <repositories>
 		<repository>
 			<id>mulesoft-ee-releases</id>
 			<name>MuleSoft Releases Repository</name>
-			<url>http://repository.mulesoft.org/releases/</url>
+			<url>https://repository.mulesoft.org/releases/</url>
 			<layout>default</layout>
 		</repository>
 		<repository>
 			<id>mulesoft-snapshots</id>
 			<name>MuleSoft Snapshots Repository</name>
-			<url>http://repository.mulesoft.org/snapshots/</url>
+			<url>https://repository.mulesoft.org/snapshots/</url>
 			<layout>default</layout>
 		</repository>
 	</repositories>
