--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
-            <version>2.8.1</version>
+            <version>${hadoop.version}</version>
         </dependency>
 
         <dependency>
