--- a/src/test/resources/automation-credentials.properties
+++ b/src/test/resources/automation-credentials.properties
@@ -1,3 +1,3 @@
-hdfs.nameNodeUri=localhost:9000
-hdfs.username=dragos.boghitoiu
+hdfs.nameNodeUri=hdfs://localhost:9000
+hdfs.username=bogdan.filip
 #hdfs.keytabPath=
