--- a/demo/common-operations/pom.xml
+++ b/demo/common-operations/pom.xml
@@ -44,10 +44,10 @@
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
-			 <groupId>org.mule.connectors</groupId>
-             <artifactId>mule-hdfs-connector</artifactId>
-             <version>6.0.0-rc-001-SNAPSHOT</version>
-             <classifier>mule-plugin</classifier>	
+		 <groupId>org.mule.connectors</groupId>
+                 <artifactId>mule-hdfs-connector</artifactId>
+                 <version>6.0.0-rc</version>
+                 <classifier>mule-plugin</classifier>	
 		</dependency>
 	
 	</dependencies>
