--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
         <devkit.studio.package.skip>false</devkit.studio.package.skip>
         <connector.test.version>2.0.7</connector.test.version>
         <harmcrest.version>1.3</harmcrest.version>
+        <sonar.exclusions>
+            **org/mule/extension/hdfs/api/connection/param/KerberosConnectionParams.java,
+            **org/mule/extension/hdfs/api/connection/param/SimpleConnectionParams.java,
+            **org/mule/extension/hdfs/internal/HDFSExtension.java,
+            **org/mule/extension/hdfs/internal/mapping/object/ObjectMap.java
+        </sonar.exclusions>
     </properties>
 
     <dependencies>
@@ -38,7 +44,12 @@
             <artifactId>hadoop-client</artifactId>
             <version>${hadoop.version}</version>
         </dependency>
-
+        <dependency>
+                       <groupId>org.mule.connectors</groupId>
+                       <artifactId>mule-objectstore-connector</artifactId>
+                       <version>0.9.0-SNAPSHOT</version>
+                      <classifier>mule-plugin</classifier>
+        </dependency>
         <dependency>
 			<groupId>net.sf.dozer</groupId>
 			<artifactId>dozer</artifactId>
@@ -160,5 +171,6 @@
         <developerConnection>scm:git:git@github.com:mulesoft/hdfs-connector.git</developerConnection>
         <url>https://github.com/mulesoft/hdfs-connector</url>
     </scm>
+
  
 </project>
