--- a/demo/hdfs-poll-from-file/pom.xml
+++ b/demo/hdfs-poll-from-file/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany</groupId>
-	<artifactId>common-operations</artifactId>
+	<artifactId>hdfs-poll-from-file</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>mule-application</packaging>
 
-	<name>common-operations</name>
+	<name>hdfs-poll-from-file</name>
 
     <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -44,7 +44,7 @@
 			<version>1.0.0-SNAPSHOT</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
-		<dependency>
+			<dependency>
 		 <groupId>org.mule.connectors</groupId>
          <artifactId>mule-hdfs-connector</artifactId>
          <version>6.0.0-002-SNAPSHOT</version>
