--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,6 @@
     <properties>
         <category>Select</category>
         <licensePath>LICENSE.md</licensePath>
-        <hadoop.version>2.8.1</hadoop.version>
-        <devkit.studio.package.skip>false</devkit.studio.package.skip>
-        <connector.test.version>2.0.7</connector.test.version>
-        <harmcrest.version>1.3</harmcrest.version>
         <sonar.exclusions>
             **org/mule/extension/hdfs/api/connection/param/KerberosConnectionParams.java,
             **org/mule/extension/hdfs/api/connection/param/SimpleConnectionParams.java,
@@ -31,18 +27,16 @@
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
-            <version>${harmcrest.version}</version>
+            <version>1.3</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
-            <version>${hadoop.version}</version>
+            <version>2.8.1</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.zookeeper</groupId>
@@ -59,13 +53,11 @@
             <artifactId>zookeeper</artifactId>
             <version>3.4.10</version>
         </dependency>
-
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>4.5.3</version>
         </dependency>
-
         <dependency>
             <groupId>net.sf.dozer</groupId>
             <artifactId>dozer</artifactId>
@@ -74,7 +66,7 @@
         <dependency>
             <groupId>org.mule.connectors</groupId>
             <artifactId>mule-objectstore-connector</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
             <classifier>mule-plugin</classifier>
         </dependency>
     </dependencies>
@@ -119,34 +111,6 @@
             </plugin>
         </plugins>
     </build>
-    <repositories>
-        <repository>
-            <id>mulesoft-ee-releases</id>
-            <name>MuleSoft Releases Repository</name>
-            <url>https://repository.mulesoft.org/releases/</url>
-            <layout>default</layout>
-        </repository>
-        <repository>
-            <id>mulesoft-snapshots</id>
-            <name>MuleSoft Snapshots Repository</name>
-            <url>https://repository.mulesoft.org/snapshots/</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
-
-    <distributionManagement>
-        <repository>
-            <id>mule-ee-releases</id>
-            <name>MuleEE Releases Repository</name>
-            <url>https://repository-master.mulesoft.org/nexus/content/repositories/releases-ee/</url>
-        </repository>
-        <snapshotRepository>
-            <id>mule-ee-snapshots</id>
-            <name>MuleEE Snapshots Repository</name>
-            <url>https://repository-master.mulesoft.org/nexus/content/repositories/ci-snapshots/</url>
-            <uniqueVersion>false</uniqueVersion>
-        </snapshotRepository>
-    </distributionManagement>
     <scm>
         <connection>scm:git:git@github.com:mulesoft/hdfs-connector.git</connection>
         <developerConnection>scm:git:git@github.com:mulesoft/hdfs-connector.git</developerConnection>
