--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -11,7 +10,7 @@
 
     <groupId>org.mule.connectors</groupId>
     <artifactId>mule-hdfs-connector</artifactId>
-    <version>6.0.0-SNAPSHOT</version>
+    <version>6.0.0</version>
     <packaging>mule-extension</packaging>
     <name>Mule HDFS Connector</name>
 
@@ -128,5 +127,6 @@
         <connection>scm:git:git@github.com:mulesoft/hdfs-connector.git</connection>
         <developerConnection>scm:git:git@github.com:mulesoft/hdfs-connector.git</developerConnection>
         <url>https://github.com/mulesoft/hdfs-connector</url>
-    </scm>
+      <tag>mule-hdfs-connector-6.0.0</tag>
+  </scm>
 </project>
